# googleclean

./: .gitignore  README.md  pyproject.toml
src/googleclean/: __init__.py  db.py  delete.py  gmail_api.py  loader.py  main.py  query.py  retain.py
